integration/tests/error_invalid_url.err
error: Http Connection
  --> tests/error_invalid_url.hurl:1:5
   |
 1 | GET ???
   |     ^^^ (3) URL using bad/illegal format or missing URL
   |

